# MastodonMediaDownloader

./: .gitlab-ci.yml  README.md  pyproject.toml
src/mmdl/: main.py  progress.py
tests/: test_main.py  test_progress.py
