[project]
name = "mmdl"
version = "0.1.0"
description = "Mastodon Media Downloader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "httpx>=0.28.1",
    "rich>=15.0.0",
]

[project.scripts]
mmdl = "mmdl.main:main"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy-gitlab-code-quality>=1.1.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src", "tests"]

[tool.coverage.report]
precision = 2
